修改了火焰结界和野火的实现方式

--- a/src/main/resources/Jaina/localization/ENG/cards.json
+++ b/src/main/resources/Jaina/localization/ENG/cards.json
@@ -166,7 +166,7 @@
   },
   "jaina:Flamecannon": {
     "NAME": "Flamecannon",
-    "DESCRIPTION": "Deal !D! damage and apply jaina:Burning to a random enemy."
+    "DESCRIPTION": "Deal !D! damage and apply !M! jaina:Burning to a random enemy."
   },
   "jaina:Flamestrike": {
     "NAME": "Flamestrike",
