--- a/src/main/resources/Jaina/localization/ZHS/powers.json
+++ b/src/main/resources/Jaina/localization/ZHS/powers.json
@@ -26,7 +26,7 @@
   "jaina:ExplosiveRunesPower": {
     "NAME": "爆炸符文",
     "DESCRIPTIONS": [
-      "受到攻击时对攻击者造成 #b%d 点伤害。"
+      "#y燃烧 改为造成攻击伤害，并在敌人的回合开始时触发 #b%d 次。"
     ]
   },
   "jaina:FlameWardPower": {
